Lets hope it works how it should :) Usually I would like to write a tests for this one. But as I didnt had time, I didnt........ But I think this functionality is not so complex so it will be fine, hopefully.

--- a/src/styles.css
+++ b/src/styles.css
@@ -78,3 +78,22 @@ button#calculate {
   Add your custom CSS below this line
   ---
 */
+
+img {
+  width: 300px;
+}
+.unit {
+  font-size: 14px;
+  margin-left: 5px;
+}
+input {
+  margin-left: 5px;
+}
+.cash-line {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#results {
+  text-align: center;
+}
